--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
+  "homepage": ".",
   "scripts": {
-    "start": "cross-env NODE_PATH=src react-scripts start",
-    "build": "cross-env NODE_PATH=src react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "electron": "cross-env ELECTRON_URL=http://127.0.0.1:3000 electron ."
+    "electron": "cross-env ELECTRON_URL=http://127.0.0.1:3000 electron .",
+    "electron-build": "electron-packager ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -26,6 +28,16 @@
   ],
   "devDependencies": {
     "cross-env": "^5.2.0",
-    "electron": "^3.0.9"
+    "electron": "^3.0.9",
+    "electron-packager": "^12.2.0"
+  },
+  "build": {
+    "appId": "notepad.thecoder.kr",
+    "fileAssociations": [
+      {
+        "ext": "txt",
+        "name": "Text file"
+      }
+    ]
   }
 }
